# c-sys-programming

./: .gitignore  README.md
Lab1/: CMakeLists.txt  Somedata.txt  execute.sh  execute_task1.sh  task1.c  task2.c  testable.c
Lab2/: CMakeLists.txt  execute_task1.sh  execute_task2.sh  task1.c  task2.c
Lab3/: CMakeLists.txt  execute_task1.sh  task2.c
Lab4/: execute_task2.sh  task1.c
Lab5/: CMakeLists.txt  Readme.md  constants.c  constants.h  data.txt  lab5.c  reciever.c  reciever.h  start_receiver.sh  start_transmitter.sh  transmitter.c  transmitter.h  utility.c  utility.h
